:alien: Correcting alignment and spacing

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ html, body {
 /* Testimonials container */
 
 .testimonials-container {
-  gap: 2.5rem;
+  gap: 2rem;
   width: 100%;
   height: 100%;
   display: grid;
@@ -46,8 +46,15 @@ html, body {
 
 /* Testimonial card's */
 
+.testimonial {
+  padding: 1.5rem 2rem;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+
 .person {
   display: flex;
+  margin-bottom: 1rem;
 }
 
 .person img {
@@ -56,11 +63,11 @@ html, body {
 }
 
 .person div {
-  margin-left: 1rem;
+  margin-left: 1.5rem;
 }
 
 .person div h1 {
-  font-size: 16px;
+  font-size: 1.22rem;
   font-weight: bold;
 }
 
@@ -68,16 +75,30 @@ html, body {
   font-weight: lighter;
 }
 
-.testimonial {
-  border-radius: 1rem;
-  overflow: hidden;
+.phase {
+  font-size: 1.5rem;
+  font-weight: bold;
+  position: relative;
+  margin-bottom: 1rem;
+}
+
+.testimonial p+p {
+  font-size: 1rem;
+  line-height: 1.3rem;
+}
+
+.quotation {
+  top: 0;
+  right: 80px;
+  position: absolute;
 }
 
 /* Testimonial card's positions */
 
 .testimonial:nth-child(1) {
-  grid-column: 1 / 3;
   grid-row: 1 / 2;
+  position: relative;
+  grid-column: 1 / 3;
   background: var(--moderate-violet);
 }
 
